--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 528px;
-  height: 581px;
+
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -340,15 +340,10 @@ p {
 
 .modal-form {
   z-index: 3;
-  position: absolute;
-  width: 448px;
-  height: 342px;
   top: 75px;
   left: 40px;
 }
 .form-block {
-  display: flex;
-  flex-direction: column;
   text-align: left;
   margin-bottom: 10px;
 }
@@ -408,7 +403,7 @@ textarea {
   resize: none;
 }
 .textarea {
-  width: 448px;
+  width: 100%;
   height: 120px;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -485,9 +480,8 @@ textarea {
 }
 
 .btn-submit {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
+  display: block;
+  margin: 0 auto;
   height: 50px;
   background-color: var(--color-logo);
   border: none;
@@ -979,7 +973,9 @@ footer {
   letter-spacing: 0.03em;
 
   color: rgba(255, 255, 255, 0.6);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-input:focus {
+.footer-input:focus,
+.footer-input:hover {
   border-color: var(--acsent-color);
 }
